<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    tools:context="com.example.jiayin.helpfordemo.help.activity.GiveMoneyActivity">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/you_want_thing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/you_want_thing"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:textSize="@dimen/font_smalll" />

            <EditText
                android:id="@+id/start_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/start_location"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:textSize="@dimen/font_smalll" />

            <EditText
                android:id="@+id/start_location_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/start_location_detail"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:textSize="@dimen/font_smalll" />

            <EditText
                android:id="@+id/end_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/end_location"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:textSize="@dimen/font_smalll" />

            <EditText
                android:id="@+id/end_location_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/end_location_detail"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:textSize="@dimen/font_smalll" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/input_phone"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:textSize="@dimen/font_smalll" />

            <TextView
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:text="@string/end_date"
                android:textSize="@dimen/font_smalll" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                android:orientation="horizontal"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/give_money_text"
                    android:textSize="@dimen/font_smalll" />

                <SeekBar
                    android:id="@+id/seek_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_weight="5" />

                <TextView
                    android:id="@+id/text_money"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/font_smalll" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                android:orientation="vertical"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/good_detail"
                        android:textSize="@dimen/font_smalll" />

                    <EditText
                        android:id="@+id/et_good_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/imageAction"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/icon_photo_add" />

                    <ImageView
                        android:id="@+id/image_show"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/bg_plus"
                        android:scaleType="centerCrop"
                        android:src="@drawable/default_load" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_publish_reward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:text="@string/publish_reward" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>